src/tests/testfiles/function-calls/parameter-type-8.txt
testfiles/function-calls/parameter-type-8.c:6:3: error: number of arguments to function 'f' does not match definition (have 0, need 1)
f();
^
